--- a/Frontend/css/screen_addUser.css
+++ b/Frontend/css/screen_addUser.css
@@ -111,7 +111,7 @@ html {
   color: var(--color-text);
   font-size: 16px;
   line-height: 1.5;
-  font-family: "Inter Web", Helvetica, arial, sans-serif;
+  font-family: "Raleway", sans-serif;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -648,6 +648,7 @@ input::placeholder {
   --user-color--background: var(--global-color-button-hover);
 }
 .c-btn {
+  font-family: "Raleway", sans-serif;
   background-color: var(--user-color--btn);
   color: var(--color-text);
   border: 1px solid var(--color-text);
@@ -679,6 +680,7 @@ input::placeholder {
 }
 .c-input {
   font-size: 1rem;
+  font-family: "Raleway", sans-serif;
   line-height: 1.5rem;
   color: var(--user-color--text);
   background-color: var(--color-white);
