--- a/Frontend/css/screenhighscore.css
+++ b/Frontend/css/screenhighscore.css
@@ -444,7 +444,7 @@ html {
     color: var(--global-page-color);
     font-size: 16px;
     line-height: 1.5;
-    font-family: "Inter Web", Helvetica, arial, sans-serif;
+    font-family: "Raleway", sans-serif;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
