--- a/Frontend/css/screenlogin.css
+++ b/Frontend/css/screenlogin.css
@@ -1105,6 +1105,7 @@ more padding on the right to avoid overlap
 */
 
 .c-button {
+  cursor: pointer;
   font-size: 16px;
   font-weight: 600;
   font-family: "Raleway", sans-serif;
