--- a/Frontend/css/screenlogin.css
+++ b/Frontend/css/screenlogin.css
@@ -1078,6 +1078,16 @@ more padding on the right to avoid overlap
   color: #fffbf9;
 }
 
+.c-lbl-password{
+  margin-bottom: 0;
+  margin-left: 50%;
+  padding-bottom: var(--global-whitespace-sm);
+  font-size: 14px;
+  line-height: 16px;
+  /* color: var(--label-color); */
+  color: #585151;
+}
+
 .c-dot {
   height: 150px;
   width: 150px;
