--- a/Frontend/css/leerkrachtenvragen.css
+++ b/Frontend/css/leerkrachtenvragen.css
@@ -55,6 +55,27 @@ body {
 .c-highscorebtn:hover{
   background-color:#F6C0AD;
 }
+.lbl-gebruiker{
+  cursor: pointer;
+}
+
+.c-btngebruiker{
+  display: inline-block;
+  margin-top: 10px;
+  padding: 3px;
+  border: 1px solid #474242;
+  border-radius: 4px;
+  width: 110px;
+  height: 40px;
+  background-color: #f6d9cf;
+  grid-row: 1;
+  grid-column: 7;
+  cursor: pointer;
+}
+
+.c-btngebruiker:hover{
+  background-color:#F6C0AD;
+}
 
 .lbl-titletekst {
   grid-row: 1;
