--- a/Frontend/css/screenlogin.css
+++ b/Frontend/css/screenlogin.css
@@ -1078,7 +1078,7 @@ more padding on the right to avoid overlap
   color: #fffbf9;
 }
 
-.c-lbl-password{
+.c-lbl-password {
   display: flex;
   justify-content: center;
   margin-bottom: 0;
@@ -1087,6 +1087,9 @@ more padding on the right to avoid overlap
   line-height: 16px;
   /* color: var(--label-color); */
   color: #585151;
+}
+.c-link {
+  color: #585151!important;
 }
 
 .c-dot {
